<resources>
    <string name="app_name" translatable="false">ExLonglv</string>
    <string name="facebook">Facebook</string>
    <string name="hint_email">Email or Phone</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="name">Họ tên</string>
    <string name="id_card">Cmnd</string>
    <string name="degree">Bằng cấp</string>
    <string name="intermediate">Trung cấp</string>
    <string name="college">Cao đẳng</string>
    <string name="university">Đại học</string>
    <string name="interest">Sở thích</string>
    <string name="read_news">Đọc báo</string>
    <string name="read_book">Đọc sách</string>
    <string name="coding">Coding</string>
    <string name="more_info">Thông tin bổ sung</string>
    <string name="hint_more_info">Nhập thông tin bổ sung - có thể để trống</string>
    <string name="send_info">Gửi thông tin</string>
    <string name="result">Kết quả</string>
    <string name="first_number">Số hạng 1</string>
    <string name="second_number">Số hạng 2</string>
    <string name="exercise_login">View Login</string>
    <string name="exercise_calculate">View Calculate</string>
    <string name="exercise_update_info">View Update Info</string>
    <string name="plus">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="divided">/</string>
    <string name="result_float_param">Ket qua: %f</string>
    <string name="result_int_param">Ket qua: %d</string>
    <string name="more_info_str_param">Thông tin bổ sung: %s</string>
    <string name="interest_str_param">Sở thích: %s</string>
    <string name="name_str_param">Họ tên: %s</string>
    <string name="id_card_str_param">Cmnd: %s</string>
    <string name="degree_str_param">Bằng cấp: %s</string>
    <string name="email_str_param">Email: %s</string>
    <string name="password_str_param">Password: %s</string>
    <string name="fragment_one_str_param">Fragment One: %s</string>
    <string name="fragment_two_str_param">Fragment Two: %s</string>
    <!--  strings for issue 3-->
    <string name="hint_edittext">This is hint Edittext</string>
    <string name="error_divided_zero">Không thể chia cho 0</string>
    <string name="format_input_wrong">Nhập sai định dạng</string>
    <string name="login_success">Login success</string>
    <string name="send_success">Submitted successfully</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_invalid">Mật khẩu phải lớn hơn 8 ký tự gồm chữ thường, số, ký tự đặc biệt</string>
    <string name="password_match_normal">Mật khẩu phải chứa ít nhất 1 chữ cái thường</string>
    <string name="password_match_uppercase">Mật khẩu phải chứa ít nhất 1 chữ cái viết hoa</string>
    <string name="password_match_number">Mật khẩu phải chứa ít nhất 1 số</string>
    <string name="password_match_special">Mật khẩu phải chứa ít nhất 1 ký tự đặc biệt</string>
    <string name="password_match_length">Mật khẩu phải lớn hơn 8 ký tự</string>
    <string name="name_invalid">Name is invalid</string>
    <string name="id_card_invalid">ID card phải gồm 9 chữ số</string>
    <string name="more_info_invalid">Info is invalid</string>
    <string name="more_info_too_short">Nhập lớn hơn 100 ký tự</string>
    <string name="data_from_login">Login</string>
    <string name="data_from_update_info">Update infomation</string>
    <string name="data_from_calculate">This is data from calculate</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="operator">Operator: </string>
    <string name="error">Error: </string>
    <string name="error_empty_input">Vui lòng nhập đủ thông tin: </string>
    <!--    Issues 4-->
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="change_color">Change color</string>
    <string name="view_issues_four">View Issues 4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="replace_fragment">Replace Fragment</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="add_to_back_stack">Add To Back Stack</string>
    <string name="no_add_to_back_stack">No Add To Back Stack</string>
    <!--    Issue 5-->
    <string name="view_issues_five">View Issues 5</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="delete_file">Delete File</string>
    <string name="rename_file">Rename File</string>
    <string name="open_file">Open File</string>
    <string name="share_file">Share File</string>
    <string name="show_details">Show Details</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete_this_item">Delete this item</string>
    <string name="enter_your_text">Enter your text here</string>
    <string name="enter_item_name">Nhập tên</string>
    <string name="name_item_int_param">Item %d</string>
    <string name="tab_int_param">Tab %d</string>
    <!--    Issue retrofit-->
    <string name="view_issues_retrofit">View Issues Retrofit</string>
    <string name="upload">Upload</string>
    <string name="no_pick_image">You have not picked Image</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="loading">Please wait</string>
    <string name="success">Success</string>
    <string name="error_status_int_param">Error, status code = %d</string>
    <string name="error_no_internet">No Internet</string>
    <string name="other_exception">Something else went wrong</string>
    <string name="image_exists">Ảnh đã tồn tại trong máy</string>
    <string name="no_item_more">Đã load hết ảnh</string>
    <string name="image_exists_api">Ảnh đã tồn tại</string>
    <string name="setting">Cài đặt</string>
    <string name="message_no_permission">Vui lòng cấp quyền cho ứng dụng</string>
    <string name="download_finished">Download finish</string>
    <string name="download_failed">Tải thất bại</string>
    <string name="download_started">Bắt đầu tải</string>
    <string name="channel_name_download">Download File</string>
    <string name="channel_description_download">Download Image</string>
</resources>
