<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llTwoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnReplaceFragment"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray_BDBDBD"
            android:text="@string/fragment_one"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnAddFragment"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@color/gray_BDBDBD"
            android:text="@string/fragment_two"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLabelChangeColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTwoButton"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/edtChangeColor"
        android:text="@string/change_color"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtChangeColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLabelChangeColor"
        android:autofillHints="@string/hint_edittext"
        android:inputType="textCapWords" />

    <FrameLayout
        android:id="@+id/frLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edtChangeColor" />
</RelativeLayout>
